idf_component_register(SRCS
                        "sths34pf80.c"
                        "sths34pf80-pid/sths34pf80_reg.c"
                    INCLUDE_DIRS
                        "include"
                        "sths34pf80-pid"
                        "/Users/tinyu/esp/master/esp-idf/components/ulp/lp_core/lp_core/include"
                    REQUIRES
                        ulp)
